# DGmini

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.yaml
examples/: advection.yaml  burgers.yaml
scripts/: animate_modal_solution.py  modal_solution_io.py  plot_modal_solution.py  run_advection_convergence_space.py  run_advection_convergence_time.py  run_burgers_convergence_space.py  run_burgers_convergence_time.py  utils_convergence.py  utils_modal_solution_io.py
source/: Vec.h  basis1d.cpp  basis1d.h  element1d.cpp  element1d.h  fespace1d.cpp  fespace1d.h  input.cpp  linalg.cpp  linalg.h  main.cpp  massMatrix.cpp  mass_matrix.cpp  mass_matrix.h  mesh1d.cpp  mesh1d.h  output.cpp  output.h  quadrature1d.cpp  quadrature1d.h  stiffness_matrix.cpp  stiffness_matrix.h
source/Algebra/: Mat.h  Vec.h  linalg.cpp  linalg.h
source/FEM/: basis1d.cpp  basis1d.h  fespace1d.cpp  fespace1d.h  mass_matrix.cpp  mass_matrix.h  quadrature1d.cpp  quadrature1d.h  stiffness_matrix.cpp  stiffness_matrix.h
source/IO/: cli_parser.cpp  cli_parser.h  config_reader.cpp  config_reader.h  expression_function.h  input.cpp  input.h  input_config.h  output.cpp  output.h
source/Mesh/: boundary_conditions1d.h  element1d.cpp  element1d.h  mesh1d.cpp  mesh1d.h
source/PDE/: buckley_leverett1d.h  burgers1d.h  cubic_flux_eqn1d.h  linear_advection1d.h  lwr_traffic_flow1d.h  pde.h
source/Solver/: runtime_factory.cpp  runtime_factory.h  solver.cpp  solver.h
source/Spatial/: l2_projection.cpp  l2_projection.h  lax_friedrichs_flux.h  modal_vector.h  numerical_flux.h  residual.cpp  residual.h  rusanov_flux.h
source/Spatial/NumericalFlux/: lax_friedrichs.h  numerical_flux.h  rusanov.h
source/Temporal/: cfl_number.cpp  cfl_number.h  cfl_time_step.h  fixed_time_step.h  forward_euler.h  runge_kutta_2.h  runge_kutta_3_ssp.h  runge_kutta_4.h  time_integrator.h  time_step_controller.h
source/Temporal/TimeIntegrator/: forward_euler.h  runge_kutta_2.h  runge_kutta_3_ssp.h  runge_kutta_4.h  time_integrator.h
source/Temporal/TimeStepController/: cfl_time_step.h  fixed_time_step.h
template/: class_template.h
tests/regression/: regression_utils.py  test_regression_cases.py
tests/regression/advection_gauss_forwardeuler/: config.yaml
tests/regression/advection_gauss_rk2/: config.yaml
tests/regression/advection_rk2_periodic_gauss/: config.yaml
tests/regression/advection_rk3ssp_dirichlet_sin/: config.yaml
tests/regression/advection_sin_rk3ssp/: config.yaml
tests/regression/advection_sin_rk4/: config.yaml
tests/unit/: Mat_ut.cpp  Vec_ut.h  basis1d_ut.cpp  cfl_number_ut.cpp  cli_parser_ut.cpp  cli_parser_ut.h  config_reader_ut.cpp  config_reader_ut.h  element1d_ut.cpp  element1d_ut.h  expression_function_ut.cpp  fespace1d_ut.h  l2_projection_ut.cpp  l2_projection_ut.h  linalg_ut.h  mass_matrix_ut.h  mesh1d_ut.h  modal_vector_ut.cpp  numerical_flux_ut.h  output_ut.cpp  output_ut.h  residual_ut.cpp  residual_ut.h  runtime_factory_ut.cpp  runtime_factory_ut.h  time_integrator_ut.cpp  time_integrator_ut.h  time_step_controller_ut.cpp  time_step_controller_ut.h  unittest.h  unittest_main.cpp
tests/verification/: test_space_convergence.py  test_space_convergence_burgers.py  test_time_convergence.py  test_time_convergence_burgers.py  utils_verification.py
unittest/: Mat_ut.h  Vec_ut.cpp  Vec_ut.h  basis1d_ut.cpp  basis1d_ut.h  cfl_number_ut.h  config_reader_ut.cpp  element1d_ut.cpp  element1d_ut.h  expression_function_ut.cpp  expression_function_ut.h  fespace1d_ut.cpp  fespace1d_ut.h  linalg_ut.cpp  linalg_ut.h  massMatrix_ut.cpp  massMatrix_ut.h  mass_matrix_ut.cpp  mass_matrix_ut.h  mesh1d_ut.cpp  mesh1d_ut.h  modal_vector_ut.h  numerical_flux_ut.cpp  output_ut.cpp  pde_ut.cpp  pde_ut.h  quadrature1d_ut.cpp  quadrature1d_ut.h  residual_ut.cpp  residual_ut.h  stiffness_matrix_ut.cpp  stiffness_matrix_ut.h  time_integrator_ut.cpp  time_integrator_ut.h  time_step_controller_ut.cpp  time_step_controller_ut.h  unittest.h  unittest_main.cpp
